# JDERobot_challenges

./: README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
install/ros2_demo/lib/ros2_demo/: publisher  subscriber
install/ros2_demo/share/ament_index/resource_index/package_run_dependencies/: ros2_demo
install/ros2_demo/share/ament_index/resource_index/parent_prefix_path/: ros2_demo
install/ros2_demo/share/ros2_demo/: local_setup.bash  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_demo/share/ros2_demo/cmake/: ros2_demoConfig-version.cmake  ros2_demoConfig.cmake
log/: latest_build
maps/: my_map.pgm  my_map.yaml
ros2_demo/: CMakeLists.txt
ros2_demo/src/: publisher.cpp  subscriber.cpp
